--- a/hugo.yml
+++ b/hugo.yml
@@ -1,6 +1,6 @@
-baseURL: "https://socials.lbenicio.dev"
+baseURL: "https://newsletter.lbenicio.dev"
 languageCode: en-us
-title: Leonardo Benicio
+title: Leonardo Benicio Newsletter Subscribers
 description: >-
     A minimal website/blog theme for developers. It is a simple and clean theme
     for developers who want to showcase their work and write about their
