--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,14 @@
 name: Auto merge dependabot PRs
 
 on:
-  pull_request:
+    pull_request:
 
 jobs:
-  auto-merge:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
-        with:
-          target: minor
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+    auto-merge:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: ahmadnassri/action-dependabot-auto-merge@v2
+              with:
+                  target: minor
+                  github-token: ${{ secrets.MY_TOKEN }}
